--- a/NOVA/Views/Uretim/Partials/MES/AllMachines/_MainPartial.cshtml
+++ b/NOVA/Views/Uretim/Partials/MES/AllMachines/_MainPartial.cshtml
@@ -170,12 +170,12 @@
     function Operator1Box(Data) {
         var OperatorBox = Data.OPERATOR1 !== null ?
             `<div class="d-flex justify-content-start align-items-center gap-2">
-                            <img src="/assets/img/avatars/${Data.OPERATOR1}.png" class="rounded-circle" height="35" width="35" onerror="javascript:this.src='/assets/img/avatars/10000.png'" />
+                            <img src="/assets/img/avatars/${Data.OPERATOR1}.png" class="rounded-circle" style="background-color:white;" height="35" width="35" onerror="javascript:this.src='/assets/img/avatars/10000.png'" />
                             <span>${Data.OPERATOR1_NAME}</span>
                         </div>`
             :
             `<div class="d-flex justify-content-start align-items-center gap-2">
-                            <img src="/assets/img/avatars/10000.png" class="rounded-circle" height="35" width="35" onerror="javascript:this.src='/assets/img/avatars/10000.png'" />
+                            <img src="/assets/img/avatars/10000.png" class="rounded-circle" style="background-color:white;" height="35" width="35" onerror="javascript:this.src='/assets/img/avatars/10000.png'" />
                             <span>Bilgi Bulunamadı.</span>
                         </div>`
             ;
@@ -186,12 +186,12 @@
     function Operator2Box(Data) {
         var OperatorBox = Data.OPERATOR2 !== null ?
             `<div class="d-flex justify-content-start align-items-center gap-2">
-                            <img src="/assets/img/avatars/${Data.OPERATOR2}.png" class="rounded-circle" height="35" width="35" onerror="javascript:this.src='/assets/img/avatars/10000.png'" />
+                            <img src="/assets/img/avatars/${Data.OPERATOR2}.png" class="rounded-circle" style="background-color:white;" height="35" width="35" onerror="javascript:this.src='/assets/img/avatars/10000.png'" />
                             <span>${Data.OPERATOR2_NAME}</span>
                         </div>`
             :
             `<div class="d-flex justify-content-start align-items-center gap-2">
-                            <img src="/assets/img/avatars/10000.png" class="rounded-circle" height="35" width="35" onerror="javascript:this.src='/assets/img/avatars/10000.png'" />
+                            <img src="/assets/img/avatars/10000.png" class="rounded-circle" style="background-color:white;" height="35" width="35" onerror="javascript:this.src='/assets/img/avatars/10000.png'" />
                             <span>Bilgi Bulunamadı.</span>
                         </div>`
             ;
