--- a/NOVA/Views/Finans/DetayliRiskLimiti.cshtml
+++ b/NOVA/Views/Finans/DetayliRiskLimiti.cshtml
@@ -2,34 +2,58 @@
     Layout = "/Views/Shared/_Layout_Genel.cshtml";
 }
 
-<div class="row gy-2">
-    <div class="col-12 col-sm-12 col-md-12 col-lg-4">
-        <div class="shadow-sm" style="background-color: var(--container-color); border-radius: var(--container-radius); height: 250px; width: -webkit-fill-available;padding:0.75rem;">
-            <select id="cari-select" name="cari" style="width: 100%;height:2rem;">
-                <option value="AL">Alabama</option>
-                <option value="WY">Wyoming</option>
-            </select>
-        </div>
-    </div>
-    <div class="col-12 col-sm-12 col-md-12 col-lg-4">
-        <div class="shadow-sm" style="background-color: var(--container-color); border-radius: var(--container-radius); height: 250px; width: -webkit-fill-available;">
-
-        </div>
-    </div>
-    <div class="col-12 col-sm-12 col-md-12 col-lg-4">
-        <div class="shadow-sm" style="background-color: var(--container-color); border-radius: var(--container-radius); height: 250px; width: -webkit-fill-available;">
-
-        </div>
-    </div>
-</div>
 <div class="row">
-    <div class="col-sm">col-sm</div>
-    <div class="col-sm">col-sm</div>
-    <div class="col-sm">col-sm</div>
+    <div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-3 p-1">
+        @Html.Partial("Partials/DetayliRiskLimiti/CariBilgileri")
+    </div>
+    <div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-5 p-1">
+        @Html.Partial("Partials/DetayliRiskLimiti/DogrudanBorclandirmaSistemi")
+    </div>
+    <div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-4 p-1">
+        @Html.Partial("Partials/DetayliRiskLimiti/VadesineGoreBorclar")
+    </div>
+    <div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-3 p-1">
+        @Html.Partial("Partials/DetayliRiskLimiti/BorcAlacak")
+    </div>
+    <div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-5 p-1">
+        @Html.Partial("Partials/DetayliRiskLimiti/Riskler")
+    </div>
 </div>
+
+<style>
+    .money-unit {
+        font-size: x-large;
+        width: 40px;
+    }
+
+    .left-top-borderless-cell {
+        border-left: 1px solid Transparent !important;
+        border-top: 1px solid Transparent !important;
+    }
+</style>
 
 <script>
     $(document).ready(() => {
-        $('#cari-select').select2({ language: "tr" });
+        $('#cari-isim-select').select2({ language: "tr" });
+
+        ShowProgress();
+        CarileriGetir();
     });
+
+    function ParaBirimiFormat(Value, Locale = 'tr-TR', Currency = 'TRY')
+    {
+        return (Value == null || Value == 0) ? "₺0,00" : Value.toLocaleString(Locale, { style: 'currency', currency: Currency, minimumFractionDigits: 2 });
+    }
+
+    function NullOrZero(Value) {
+        return (Value == null || Value == 0) ? true : false;
+    }
+
+    function NotNullOrZero(Value) {
+        return (Value != null || Value != 0) ? true : false;
+    }
+
+    function ABS(Value) {
+        return Value == undefined ? 0 : Math.abs(Value);
+    }
 </script>
