--- a/NOVA/Views/Profil/Index.cshtml
+++ b/NOVA/Views/Profil/Index.cshtml
@@ -1,136 +1,123 @@
-﻿
-@{
-    Layout = "/Views/Shared/_Layout_profil.cshtml";
+﻿@{
+    Layout = "/Views/Shared/_Layout_Genel.cshtml";
+
+    string ProfilePhotoPath = Request.Cookies["Id"].Value + ".png";
 }
 
 @model NOVA.Models.Login
 
-<!DOCTYPE html>
+<div class="container-xxl flex-grow-1 container-p-y">
+    <div class="row">
+        <div class="col-md-12">
+            <div class="card mb-4">
+                <h5 class="card-header">Profil Bilgileri</h5>
+                <!-- Account -->
+                <div class="card-body">
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Index</title>
-    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-</head>
-<body onclose="close()">
-    <div class="container-xxl flex-grow-1 container-p-y">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="card mb-4">
-                    <h5 class="card-header">Profil Bilgileri</h5>
-                    <!-- Account -->
-                    <div class="card-body">
+                    @using (Html.BeginForm("UploadFile", "Home", FormMethod.Post, new { enctype = "multipart/form-data" }))
+                    {
+                        <div class="d-flex align-items-start align-items-sm-center gap-4">
+                            @{ string s = ViewBag.Id + ".png?" + DateTime.Now.Ticks.ToString(); }
 
-                        @using (Html.BeginForm("UploadFile", "Home", FormMethod.Post, new { enctype = "multipart/form-data" }))
+                            <img src="/assets/img/avatars/@ProfilePhotoPath" onerror="this.onerror=null;this.src='/assets/img/avatars/10000.png';" alt="user-avatar" class="d-block rounded" height="100" width="100" id="blah">
+
+                        </div>
+                    }
+
+                </div>
+                <hr class="my-0">
+                <div class="card-body">
+                    @if (Session["Alert"] != null)
+                    {
+                        if (Session["Alert"].ToString() == "Eski Şifreniz Yanlış")
                         {
-                            <div class="d-flex align-items-start align-items-sm-center gap-4">
-                                @{ string s = ViewBag.Id + ".png?" + DateTime.Now.Ticks.ToString(); }
-
-                                <img src="~/assets/img/avatars/@s" alt="user-avatar" class="d-block rounded" height="100" width="100" id="blah">
-
+                            <div class="alert alert-danger" role="alert">
+                                <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
+                                @Session["Alert"].ToString()
                             </div>
                         }
-
-                    </div>
-                    <hr class="my-0">
-                    <div class="card-body">
-                        @if (Session["Alert"] != null)
+                        else if (Session["Alert"].ToString() == "Girmiş olduğunuz şifreler aynı değil!")
                         {
-                            if (Session["Alert"].ToString() == "Eski Şifreniz Yanlış")
-                            {
-                                <div class="alert alert-danger" role="alert">
-                                    <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
-                                    @Session["Alert"].ToString()
-                                </div>
-                            }
-                            else if (Session["Alert"].ToString() == "Girmiş olduğunuz şifreler aynı değil!")
-                            {
-                                <div class="alert alert-danger" role="alert">
-                                    <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
-                                    @Session["Alert"].ToString()
-                                </div>
-                            }
-                            else if (Session["Alert"].ToString() == "Şifre değişikliği başarılı!")
-                            {
-                                <div class="alert alert-success" role="alert">
-                                    <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
-                                    @Session["Alert"].ToString()
-                                </div>
-                            }
-                        }
-                        <form id="formAccountSettings" method="POST" onsubmit="return false">
-                            <div class="row">
-                                <div class="mb-3 col-md-6">
-                                    <label for="firstName" class="form-label">Ad</label>
-                                    <input class="form-control" type="text" id="firstName" name="firstName" value="@Request.Cookies["FirstName"].Value.ToString()" autofocus="" disabled>
-                                </div>
-                                <div class="mb-3 col-md-6">
-                                    <label for="lastName" class="form-label">Soyad</label>
-                                    <input class="form-control" type="text" name="lastName" id="lastName" value="@Request.Cookies["LastName"].Value.ToString()" disabled>
-                                </div>
-                                <div class="mb-3 col-md-6">
-                                    <label for="address" class="form-label">Yetki Grubu</label>
-                                    <input type="text" class="form-control" id="rolename" name="role" placeholder="" value="@Request.Cookies["RoleName"].Value.ToString()" disabled>
-                                </div>
-                                <div class="mb-3 col-md-6">
-                                    <label for="email" class="form-label">E-mail</label>
-                                    <input class="form-control" type="text" id="email" name="email" value="@Request.Cookies["Mail"].Value.ToString()" placeholder="" disabled>
-                                </div>
-
+                            <div class="alert alert-danger" role="alert">
+                                <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
+                                @Session["Alert"].ToString()
                             </div>
-
-                        </form>
+                        }
+                        else if (Session["Alert"].ToString() == "Şifre değişikliği başarılı!")
+                        {
+                            <div class="alert alert-success" role="alert">
+                                <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
+                                @Session["Alert"].ToString()
+                            </div>
+                        }
+                    }
+                    <form id="formAccountSettings" method="POST" onsubmit="return false">
                         <div class="row">
-                            <div class="col">
-                                <button class="btn btn-info" onclick="sendmail()">Şifre için Mail Gönder</button>
+                            <div class="mb-3 col-md-6">
+                                <label for="firstName" class="form-label">Ad</label>
+                                <input class="form-control" type="text" id="firstName" name="firstName" value="@Request.Cookies["FirstName"].Value.ToString()" autofocus="" disabled>
                             </div>
-                            <div class="col-8">
+                            <div class="mb-3 col-md-6">
+                                <label for="lastName" class="form-label">Soyad</label>
+                                <input class="form-control" type="text" name="lastName" id="lastName" value="@Request.Cookies["LastName"].Value.ToString()" disabled>
+                            </div>
+                            <div class="mb-3 col-md-6">
+                                <label for="address" class="form-label">Yetki Grubu</label>
+                                <input type="text" class="form-control" id="rolename" name="role" placeholder="" value="@Request.Cookies["RoleName"].Value.ToString()" disabled>
+                            </div>
+                            <div class="mb-3 col-md-6">
+                                <label for="email" class="form-label">E-mail</label>
+                                <input class="form-control" type="text" id="email" name="email" value="@Request.Cookies["Mail"].Value.ToString()" placeholder="" disabled>
+                            </div>
 
-                            </div>
                         </div>
 
+                    </form>
+                    <div class="row">
+                        <div class="col">
+                            <button class="btn btn-info" onclick="sendmail()">Şifre için Mail Gönder</button>
+                        </div>
+                        <div class="col-8">
 
+                        </div>
                     </div>
-                    <!-- /Account -->
+
+
                 </div>
+                <!-- /Account -->
             </div>
         </div>
     </div>
-    <script src="~/Scripts/jquery-3.6.1.min.js"></script>
-    <script>
+</div>
 
-            if ($(window).width() < 600) {
-                $("#divPartial2").show();
-            }
-            else {
-                $("#divPartial").show();
-            }
-        function readURL(input) {
-            document.getElementById("resimKaydet").removeAttribute("disabled")
-            if (input.files && input.files[0]) {
-                var reader = new FileReader();
+<script>
 
-                reader.onload = function (e) {
-                    $('#blah')
-                        .attr('src', e.target.result);
-                };
+    $(document).ready(() =>
+    {
+        HideProgress();
+    });
 
-                reader.readAsDataURL(input.files[0]);
-            }
+    function readURL(input) {
+        document.getElementById("resimKaydet").removeAttribute("disabled")
+        if (input.files && input.files[0]) {
+            var reader = new FileReader();
+
+            reader.onload = function (e) {
+                $('#blah')
+                    .attr('src', e.target.result);
+            };
+
+            reader.readAsDataURL(input.files[0]);
         }
-        function close() {
-            @{Session["Alert"] = null;
-            }
-        }
-        function sendmail() {
-            location.href = '@Url.Action("SendPasswordMail", "Profil")';
-            Swal.fire(
-                'BAŞARILI',
-                'Link başarıyla gönderildi.'
-            )
-        }
-    </script>
+    }
 
-</body>
-</html>
+    function close()
+    {
+        @{ Session["Alert"] = null; }
+    }
+
+    function sendmail() {
+        location.href = '@Url.Action("SendPasswordMail", "Profil")';
+        Swal.fire('BAŞARILI', 'Link başarıyla gönderildi.');
+    }
+</script>
