--- a/NOVA/Views/Shared/_Layout_Genel.cshtml
+++ b/NOVA/Views/Shared/_Layout_Genel.cshtml
@@ -24,13 +24,13 @@
     <link rel="icon" type="image/x-icon" href="/assets/img/icons/brands/Nova_White.png" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/apexcharts/3.44.0/apexcharts.css" integrity="sha512-9Zgt4RA23lahOIH9fJVDjaTysTSkt9BubwhO9Zab+N/8s95XMe2bOvWN9JmmuFkEkei90eUIHGWK4yZqHYR4Sw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
 
 
     <script type="text/javascript" src="\assets\vendor\js\helpers.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/apexcharts/3.44.0/apexcharts.js" integrity="sha512-29Z9ydZ5WHzAHcxDnjXUIXrwsG2wIgjKxV07sRA5CUxmulBKK0ASCXrncPFvwZOLXtYmP0Km6lrQBRqjLJazvQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
 
     <style>
@@ -68,8 +68,8 @@
             background-color: var(--body-color);
             color: var(--text-color);
             font-family: var(--body-font);
-            padding-left: 68px;
-            transition: all 0.5s;
+            padding-left: 0;
+            transition: padding-left 0.5s;
         }
 
         .main {
@@ -77,10 +77,6 @@
             position: relative;
             padding: 0.75rem;
             padding-bottom: 2.5rem;
-        }
-
-        .content {
-            padding-top: 0.5rem;
         }
 
         .header {
@@ -93,36 +89,36 @@
             border-radius: var(--container-radius);
         }
 
-            .header > .toggle-menu > i {
+            .header .toggle-menu i {
                 font-size: x-large;
                 cursor: pointer;
                 display: none;
             }
 
-            .header > .profile {
+            .header .profile {
                 position: relative;
             }
 
-                .header > .profile > .information {
+                .header  .profile .information {
                     display: flex;
                     justify-content: center;
                     align-items: center;
                     gap: 0.5rem;
                 }
 
-                    .header > .profile > .information > .photo {
+                    .header  .profile  .information  .photo {
                         position: relative;
                         cursor: pointer;
                     }
 
-                        .header > .profile > .information > .photo > img {
+                        .header  .profile  .information  .photo  img {
                             width: 40px;
                             height: 40px;
                             border-radius: 50%;
                             object-fit: cover;
                         }
 
-                        .header > .profile > .information > .photo > .status {
+                        .header  .profile  .information  .photo  .status {
                             position: absolute;
                             bottom: 0;
                             right: 0;
@@ -133,7 +129,7 @@
                             border: 2px solid var(--container-color);
                         }
 
-                        .header > .profile > .information > .photo > .context-menu {
+                        .header  .profile .information  .photo  .context-menu {
                             position: absolute;
                             top: 3rem;
                             right: 0;
@@ -145,10 +141,12 @@
                             display: none;
                             flex-direction: column;
                             justify-content: center;
-                            padding: 0.25rem 0;
+                            padding: 0.25rem 0.2rem;
+                            z-index: 1000;
                         }
 
-                            .header > .profile > .information > .photo > .context-menu > .context-menu-item {
+                            .header  .profile .information .photo .context-menu .context-menu-item {
+                                text-decoration: none;
                                 display: flex;
                                 align-items: center;
                                 gap: 0.5rem;
@@ -156,10 +154,14 @@
                                 margin: 0.1rem 0;
                                 padding: 0 0.5rem;
                                 cursor: pointer;
+                                color: #58555e;
+                                line-height: 2rem;
                             }
 
-                                .header > .profile > .information > .photo > .context-menu > .context-menu-item:hover {
-                                    background-color: #f7f7f7;
+                                .header .profile .information .photo .context-menu .context-menu-item:hover {
+                                    color: #203289 !important;
+                                    background-color: rgb(88 85 94 / 7%) !important;
+                                    border-radius: 0.375rem;
                                 }
 
         .footer {
@@ -180,7 +182,7 @@
             }
 
         #progress-overlay {
-            z-index: 90000 !important;
+            z-index: 5000 !important;
             position: fixed;
             top: 0;
             right: 0;
@@ -190,17 +192,43 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            display: none;
+            display: flex;
             background: #0000004d;
-            backdrop-filter: blur(4.1px);
-            -webkit-backdrop-filter: blur(4.1px);
         }
 
             #progress-overlay > img {
                 height: 120px;
                 width: 120px;
-                animation: Beat 1s infinite ease-in-out;
+                animation: Beat 2s infinite ease-in-out;
             }
+
+        #logout-overlay {
+            z-index: 5000 !important;
+            position: fixed;
+            top: 0;
+            right: 0;
+            left: 0;
+            bottom: 0;
+            z-index: 40;
+            display: none;
+            justify-content: center;
+            align-items: center;
+            background: #0000004d;
+        }
+
+        #menu-overlay {
+            z-index: 4000 !important;
+            position: fixed;
+            top: 0;
+            right: 0;
+            left: 0;
+            bottom: 0;
+            z-index: 40;
+            display: none;
+            justify-content: center;
+            align-items: center;
+            background: #0000004d;
+        }
 
         @@keyframes Beat {
             0% {
@@ -215,19 +243,78 @@
                 transform: scale(0.8)
             }
         }
+
+        .skeleton {
+            animation: skeleton-loading 1s linear infinite alternate;
+        }
+
+        @@keyframes skeleton-loading {
+            0% {
+                background-color: hsl(200, 20%, 80%);
+            }
+
+            100% {
+                background-color: hsl(200, 20%, 95%);
+            }
+        }
+
+        .skeleton-text {
+            width: 100%;
+            height: 0.7rem;
+            margin-bottom: 0.5rem;
+            border-radius: 0.25rem;
+        }
+
+        .skeleton-text__body {
+            width: 75%;
+        }
+
+        .skeleton-footer {
+            width: 30%;
+        }
+
+        *, *:before, *:after {
+            -webkit-box-sizing: border-box;
+            -moz-box-sizing: border-box;
+            box-sizing: border-box;
+        }
     </style>
 
 </head>
 <body>
 
+    <div id="logout-overlay">
+        <div class="bg-white rounded-2 shadow-lg d-flex flex-column justify-content-between align-items-center py-4" style="height:200px;width:375px;">
+
+            <div  class="d-flex flex-column justify-content-center align-items-center">
+                <div class="d-flex justify-content-center align-items-center gap-1">
+                    <img src="/assets/img/icons/brands/Nova.png" style="height:40px;" />
+                    <span style="font-size: xx-large;font-weight: 700;color: #434a7f;">NOVA</span>
+                </div>
+
+                <span style="font-weight:500;">Çıkış yapmak istediğinize emin misiniz?</span>
+            </div>
+
+            <div class="w-75 d-flex justify-content-center align-items-center gap-4">
+                <button class="btn btn-danger w-75" onclick="location.href='@Url.Action("LogOff", "Login")'">EVET</button>
+                <button class="btn btn-gray w-75" onclick="ToggleLogoutModal('close')">HAYIR</button>
+            </div>
+        </div>
+    </div>
+
+    <div id="menu-overlay"></div>
+
     <div id="progress-overlay"><img src="/assets/img/icons/brands/Nova.png"></div>
 
-    @Html.Partial("../Shared/_Layout_WebMenu")
+    @Html.Partial("../Shared/_Layout_GenelMenu")
 
     <div class="main">
         <div class="header shadow-sm">
-            <div class="toggle-menu">
-                <i class="bi bi-list"></i>
+            <div class="d-flex justify-content-center align-items-center gap-1">
+                <div class="toggle-menu" onclick="ToggleMenu()">
+                    <i class="bi bi-list"></i>
+                </div>
+                @*<span>@ViewBag.PageTitle</span>*@
             </div>
 
             <div class="profile">
@@ -238,12 +325,12 @@
                         <div class="status"></div>
 
                         <div class="context-menu shadow-sm">
-                            <div class="context-menu-item">
+                            <a class="context-menu-item" href="/Profil/Index">
                                 <i class="bi bi-person-fill"></i>
                                 <span>Profil</span>
-                            </div>
-                            <div class="context-menu-item">
-                                <i class="bi bi-door-closed-fill"></i>
+                            </a>
+                            <div class="context-menu-item" onclick="ToggleLogoutModal()">
+                                <i class='bx bxs-log-out'></i>
                                 <span>Çıkış</span>
                             </div>
                         </div>
@@ -251,7 +338,7 @@
                 </div>
             </div>
         </div>
-        <div class="container-fluid content">
+        <div style="padding:0.5rem;">
             @RenderBody()
         </div>
         <div class="footer">
@@ -276,25 +363,35 @@
         window.onresize = () => { MobileOrWeb(); };
 
         function MobileOrWeb() {
+
+            CollapseMenu();
+
             if (window.innerWidth < 770) {
+
+                $('.side-menu').unbind('mouseenter mouseleave');
+
+                $('.header .toggle-menu i').show();
                 $('body').css('padding-left', '0');
-                $('.header > .toggle-menu > i').show();
+                $('.side-menu').css('width', '0');
+
                 $('#navbar').hide();
             }
             else {
-                $('body').css('padding-left', '68px');
-                $('.header > .toggle-menu > i').hide();
+                $('.side-menu').bind('mouseenter', ExpandMenu).bind('mouseleave', CollapseMenu);
+
+                $('.header .toggle-menu i').hide();
+                $('body').css('padding-left', '60px');
+                $('.side-menu').css('width', '60px');
+
                 $('#navbar').show();
             }
         }
 
         //Progress
         function ShowProgress() {
-            document.activeElement.blur();
             document.body.style.overflow = 'hidden';
+            document.activeElement.blur();
             $('#progress-overlay').fadeIn('fast').css('display', 'flex');
-
-            setTimeout(HideProgress, 2000);
         }
 
         function HideProgress() {
@@ -302,20 +399,46 @@
             $('#progress-overlay').fadeOut('fast');
         }
 
+        //ToggleMenu
+        function ToggleMenu() {
+            ExpandMenu();
+        }
+
+        $('#menu-overlay').on('click', () => {
+            CollapseMenu();
+        });
+
         //Profile Context Menu
         var ProfileContextMenuShowed = false;
 
-        $('.header > .profile > .information > .photo').on('click', () => {
-            $('.header > .profile > .information > .photo > .context-menu').toggle('fast');
+        $('.header .profile .information .photo').on('click', () => {
+            $('.header .profile .information .photo .context-menu').toggle('fast');
             ProfileContextMenuShowed = !ProfileContextMenuShowed;
         });
 
         $(document).click(function (e) {
-            if ($(e.target).parents(".header > .profile").length === 0 && ProfileContextMenuShowed) {
-                $('.header > .profile > .information > .photo > .context-menu').toggle('fast');
+            if ($(e.target).parents(".header .profile").length === 0 && ProfileContextMenuShowed) {
+                $('.header .profile .information .photo .context-menu').toggle('fast');
                 ProfileContextMenuShowed = !ProfileContextMenuShowed;
             }
         });
+
+        //Logout
+        function ToggleLogoutModal(State = 'open')
+        {
+            switch (State) {
+                case 'open':
+                    CollapseMenu();
+                    document.activeElement.blur();
+                    document.body.style.overflow = 'hidden';
+                    $('#logout-overlay').fadeIn('fast').css('display', 'flex');
+                    break;
+                case 'close':
+                    document.body.style.overflow = 'auto';
+                    $('#logout-overlay').fadeOut('fast');
+                    break;
+            }
+        }
     </script>
 
 </body>
